2007-10-10 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/pq_event.pl: Event client for Palomar-Quest events

2007-09-25 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/eSTAR Status.wdgt/*: Removed link to FTN web camera.
	
2007-09-24 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Basic network status for iPhone using iUI

2007-09-14 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_sky/plastic.kml: Network link for Plastic application
	
	* demo/google_sky/Diagram.ppt: Diagram for proof-of-concept Plastic
	
2007-08-26 Alasdair Allan <aa@astro.ex.ac.uk>

        * startup/google: Startup script for the Google event_client.pl for
	  estar4.astro.ex.ac.uk and the.
	  
	* demo/google_sky/google_plastic.pl: Outbound Plastic added.


2007-08-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * demo/google_sky/google_plastic.pl: Plastic-enabling Google Sky.
	
2007-08-22 Alasdair Allan <aa@astro.ex.ac.uk>

        * demo/google_sky/event_client.pl: Basic infrastructure in place.
        
2007-08-21 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/status.cgi, scoring.cgi & performance.cgi:
          Modified to work on a month-by-month basis.
          
2007-08-16 Alasdair Allan <aa@astro.ex.ac.uk>

	* ogle_fetch_v2.pl: Updated ogle_fetch for new V2 of PLOP
	
	* startup/cron/ogle_fetch_*: Updated to run ogle_fetch_v2.pl
	
2007-07-10 Alasdair Allan <aa@astro.ex.ac.uk>

	* ogle_DB_client.pl: Added event client to slurp live OGLE feed
          into the STAP service database.

2007-05-21 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/jach_agent.pl: Added more debug and updaated project ID

	* startup/test_templates.pl: Updated project ID

2007-05-04 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/robonet-1.0/cgi-bin/performance.cgi: Made pretty.

2007-05-03 Eric Saunders <saunders@astro.ex.ac.uk>

	* etc/adaptive_vs_scheduler.csh: Commit of startup script

2007-05-02 Alasdair Allan <aa@astro.ex.ac.uk>
