@@ -1,3 +1,7 @@
+2007-11-08 Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * www/istar/*: Fixes for iUI and the iPod touch
+        
 2007-10-10 Alasdair Allan <aa@astro.ex.ac.uk>
 
         * bin/pq_event.pl: Event client for Palomar-Quest events
